<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/serachContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_input_country_name"
            android:lines="1" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/action_search" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_below="@id/serachContainer"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context="com.example.mapwithmarker.view.MapsMarkerActivity" />

    <TextView
        android:id="@+id/txtCountryName"
        android:layout_below="@id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country_name" />

    <TextView
        android:id="@+id/txtCountryCapital"
        android:layout_below="@id/txtCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country_capital" />

    <TextView
        android:id="@+id/txtCountryPopulation"
        android:layout_below="@id/txtCountryCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country_population" />

    <TextView
        android:id="@+id/txtCountryCallCode"
        android:layout_below="@id/txtCountryPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_country_call_code" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbCountry"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>